<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.yeastar.autotest</groupId>
    <artifactId>SwebTest</artifactId>
    <version>1.0.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <allure-testng.version>2.13.0</allure-testng.version>
        <allure-java-commons.version>2.13.0</allure-java-commons.version>
        <aspectj.version>1.9.2</aspectj.version>
        <slf4j-nop.version>1.7.2</slf4j-nop.version>
        <log4j-core.version>2.12.0</log4j-core.version>
        <log4j-api.version>2.12.0</log4j-api.version>
    </properties>


    <build>

        <resources>
             <resource>
                 <directory>src/main/resources</directory>
                 <includes>
                     <include>**/*.properties</include>
                     <include>**/*.dll</include>
                     <include>**/*.so</include>
                     <include>**/*.2</include>
                 </includes>
                 <filtering>false</filtering>
             </resource>
<!--            <test data properties>-->
            <resource>
                <directory>src/test/resources</directory>
                <includes>
                    <include>**/*.properties</include>
                </includes>
                <filtering>false</filtering>
            </resource>

        </resources>

        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <showWarnings>true</showWarnings>
                    <source>1.8</source>
                    <target>1.8</target>
                    <compilerArguments>
                        <bootclasspath>${JAVA_HOME}/jre/lib/rt.jar</bootclasspath>
                    </compilerArguments>
                </configuration>
            </plugin>


            <!--allure report-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.20.1</version>
                <configuration>
                    <forkMode>once</forkMode>
                    <suiteXmlFiles>
                        <suiteXmlFile>suite/${suiteXmlFile}</suiteXmlFile>
                        <!--<testng outputDir="test-output/html/"/>-->
                    </suiteXmlFiles>
                    <testFailureIgnore>true</testFailureIgnore>
                    <!--                    <forkMode>once</forkMode>-->
<!--                    <forkCount>2.0C</forkCount>-->
<!--                    <parallel>methods</parallel>-->
<!--                    <threadCount>5</threadCount>-->
                    <argLine>
                        -Dfile.encoding=UTF-8 -Xmx1524m -XX:PermSize=256m -XX:MaxPermSize=256m
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>

                    <workingDirectory>${project.build.directory}</workingDirectory>

                    <!--  让allure-results，在target文件下生成-->
                    <systemProperties>
                        <property>
                            <name>allure.results.directory</name>
                            <value>./allure-results</value>
                        </property>
                    </systemProperties>
                    <systemPropertyVariables>
                        <java.library.path>${project.build.directory}/classes</java.library.path>
                        <serviceBuildName>${serviceBuildName}</serviceBuildName>
                    </systemPropertyVariables>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

        </plugins>
    </build>

    <dependencies>

        <!-- import log4j2 jar start -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j-core.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j-api.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.10</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-nop</artifactId>
            <version>${slf4j-nop.version}</version>
        </dependency>
        <!-- import log4j2 jar  end -->

        <!-- import allure jar start -->
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure-testng.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-java-commons</artifactId>
            <version>${allure-java-commons.version}</version>
        </dependency>
        <!-- import log4j2 jar  end -->

        <!-- https://mvnrepository.com/artifact/com.codeborne/selenide -->
        <dependency>
            <groupId>com.codeborne</groupId>
            <artifactId>selenide</artifactId>
            <version>4.4.2</version>
            <!--<version>4.10</version>-->
            <!--<version>4.12.3</version>-->
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>2.53.1</version>
            <!--<version>3.5.1</version>-->
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.9.9</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.hynnet/jxl -->
        <dependency>
            <groupId>com.hynnet</groupId>
            <artifactId>jxl</artifactId>
            <version>2.6.12.1</version>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>reportng</groupId>-->
<!--            <artifactId>reportng</artifactId>-->
<!--            <version>1.1.5s</version>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${project.basedir}/libs/reportng-1.1.5s.jar</systemPath>-->
<!--        </dependency>-->

        <!-- https://mvnrepository.com/artifact/velocity/velocity-dep -->
        <dependency>
            <groupId>velocity</groupId>
            <artifactId>velocity-dep</artifactId>
            <version>1.4</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>3.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
        <!--<dependency>-->
            <!--<groupId>com.jcraft</groupId>-->
            <!--<artifactId>jsch</artifactId>-->
            <!--<version>0.1.53</version>-->
        <!--</dependency>-->

        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
<!--        <dependency>-->
<!--            <groupId>org.slf4j</groupId>-->
<!--            <artifactId>slf4j-log4j12</artifactId>-->
<!--            <version>1.7.21</version>-->
<!--        </dependency>-->

        <!-- https://mvnrepository.com/artifact/ch.ethz.ganymed/ganymed-ssh2 -->
        <dependency>
            <groupId>ch.ethz.ganymed</groupId>
            <artifactId>ganymed-ssh2</artifactId>
            <version>262</version>
        </dependency>

        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>4.1.0</version>
        </dependency>

        <dependency>
            <groupId>com.github.fommil</groupId>
            <artifactId>jniloader</artifactId>
            <version>1.1</version>
        </dependency>

    </dependencies>

</project>